Added UI for "My ID" to peerjs-demo

--- a/peerjs-demo.html
+++ b/peerjs-demo.html
@@ -25,6 +25,7 @@ window.onload = function() { initMessageUI(peerServer, myPeerId) };
 
 <body>
 
+<div id=me>Your ID: <span>N/A</span></div>
 <div>
   <h2>Peers</h2>
   <select id=others size=5 style="width: 20em">
